--- a/index.html
+++ b/index.html
@@ -2,16 +2,30 @@
 <html>
 	<head>
 		<title>
-			Title Text
+			Walter's Web Design Site.
 		</title>
 		<meta charset="utf-8"/>
 	</head>
 	<body>
-		<h1>
-			A heading
-		</h1>
-		<p>
-			Paragraph text.
-		</p>
+
+		<header>
+			<h1>
+				Walter's Web Design Site.
+			</h1>
+		</header>
+		<nav>
+		</nav>
+		<main>
+
+			<h2>
+				Welcome.
+			</h2>
+			<p>
+				This website will contain projects completed for the Web Design part of Computer Science 1 at CMIS.
+			</p>
+		</main>
+		<footer>
+			©2015 Walter Cheng - CMIS Web Design
+		</footer>
 	</body>
 </html>
