Edited index.html. Added link to css file.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>
 			Walter's Web Design Site.
 		</title>
+		<link rel="stylesheet" href="main.css" type="text/css">
 		<meta charset="utf-8"/>
 	</head>
 	<body>
