Edited index.html file. Completed assignment Lists and Links.

--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -11,23 +11,66 @@
 		<header>
 		</header>
 		<nav>
-		</nav>
-		<main>
 			<ul>
 				<li>
-					http://www.w3schools.com/
+					<a href="..">
+					Home
+					</a>
+				</li>
+			</ul>
+		</nav>
+		<main>
+			<h2>
+				Instructions on how to create a webpage on the production server.
+			</h2>
+			<ol>
+				<li>
+					Create an index.html file
 				</li>
 				<li>
-					http://www.htmlhelp.com/
+					Do whatever you need to do to edit the webpage, and then validate the file.
 				</li>
 				<li>
-					http://www.htmlgoodies.com/
+					Once it has no errors, save it.
 				</li>
 				<li>
-					http://www.computerhope.com/learnhtm.htm
+					Go into sftp from Terminal by typing "sftp student1234@cmis-hsteacher"
 				</li>
 				<li>
-					http://www.htmlcodetutorial.com/
+					Put the file onto the sftp server by typing "put index.html"
+				</li>
+				<li>
+					Go to your browser and type "http://cmis-hsteacher/~student1234/" into the adress bar to view your webpage
+				</li>
+			</ol>
+			<h3>
+				Links to helpful websites for html.
+			</h3>
+			<ul>
+				<li>
+					<a href="http://www.w3schools.com/">
+						http://www.w3schools.com/
+					</a>
+				</li>
+				<li>
+					<a href="http://www.htmlhelp.com/">
+						http://www.htmlhelp.com/
+					</a>
+				</li>
+				<li>
+					<a href="http://www.htmlgoodies.com/">
+						http://www.htmlgoodies.com/
+					</a>
+				</li>
+				<li>
+					<a href="http://www.computerhope.com/learnhtm.htm">
+						http://www.computerhope.com/learnhtm.htm
+					</a>
+				</li>
+				<li>
+					<a href="http://www.htmlcodetutorial.com/">
+						http://www.htmlcodetutorial.com/
+					</a>					
 				</li>
 			</ul>
 		</main>
