--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 			</h1>
 		</header>
 		<nav>
+			<ul>
+				<li>					
+					<a href="listsandlinks">
+					listsandlinks
+					</a>
+				</li>
+			<ul>
 		</nav>
 		<main>
 			<h2>
@@ -22,6 +29,40 @@
 			<p>
 				This website will contain projects completed for the Web Design part of Computer Science 1 at CMIS.
 			</p>
+			<article>
+				<h3>
+					Lists and Links
+				</h3>
+				<p>
+					This assignment is about creating lists and links using html. The assignment page is accesible by the link "listsandlinks" above.
+				</p>
+				<ul>
+					<li>
+						Create a new folder called "listsandlinks" in your repository folder.
+					</li>
+					<li>
+						Inside listsandlinks create a file called "index.html" and a file called "main.css"
+					</li>
+					<li>
+						In index.html create an ordered list of step by step instructions to create a new webpage on the production server.
+					</li>
+					<li>
+						Also create an unordered list of 5 or more links to websites with useful webdesign related information.
+					</li>
+					<li>
+						In the nav section, create an unordered list of links with a link back to your main index page.
+					</li>
+					<li>
+						In your main index.html file in public_html, add an unordered list of links to the nav section with a link to "listsandlinks".
+					</li>
+					<li>
+						Add an article with a heading and a paragraph description of this assignment. Also add an unordered list that contains this list of requirements. 
+					</li>
+					<li>
+						Turn in your work.
+					</li>
+				</ul>
+			</article>
 		</main>
 		<footer>
 			©2015 Walter Cheng - CMIS Web Design
