Edited index.html file. Changed title text to Lists and Links

--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>
-			Title Text
+			Lists and Links
 		</title>
 		<link rel="stylesheet" href="main.css" type="text/css">
 		<meta charset="utf-8"/>
