Edited index.html. Added link to tables folder.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 					</a>
 				</li>
 				<li>
+					<a href="tables">
+					tables
+					</a>
+				</li>
+				<li>
 					<a href="test">
 					test
 					</a>
