Edited index.html. Added link in nav section to tables assignment.

--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -17,6 +17,11 @@
 					Home
 					</a>
 				</li>
+				<li>
+					<a href="../tables">
+					tables
+					</a>
+				</li>
 			</ul>
 		</nav>
 		<main>
