Edited index.html. fixed errors after validating file. Completed tables assignment.

--- a/tables/index.html
+++ b/tables/index.html
@@ -20,7 +20,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="listsandlinks">
+					<a href="../listsandlinks">
 					listsandlinks
 					</a>
 				</li>
