--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					test
 					</a>
 				</li>
-			<ul>
+			</ul>
 		</nav>
 		<main>
 			<h2>
@@ -70,6 +70,48 @@
 					</li>
 					<li>
 						Turn in your work.
+					</li>
+				</ul>
+			</article>
+			<article>
+				<h3>
+					Tables
+				</h3>
+				<p>
+					This assignment is about creating Tables using html. The assignment page is accesible by the link "tables" above.
+				</p>
+				<ul>
+					<li>
+						Create a new folder in your repository called "tables"
+					</li>
+					<li>
+						In the "tables" folder, create a new file called from your template "index.html"
+					</li>
+					<li>
+						Be sure to use thead, tbody, and tfoot elements in your tables.
+					</li>
+					<li>
+						Add html code to recreate the webpage below.
+						<ul>
+							<li>
+								second table will require the use of the colspan attribute.
+							</li>
+							<li>
+								third table will require the use of the rowspan attribute.
+							</li>
+						</ul>
+					</li>
+					<li>
+						In your repository index.html file, add an article with a heading, paragraph description and this list of requirements. Also add a link to the tables/index.html file.
+					</li>
+					<li>
+						Add a link from lists and links to this assignment as well.
+					</li>
+					<li>
+						Validate your code.
+					</li>
+					<li>
+						Turn it in.
 					</li>
 				</ul>
 			</article>
