Edited index.html. added link to box.css.

--- a/tables/index.html
+++ b/tables/index.html
@@ -4,6 +4,7 @@
 		<title>
 			Tables
 		</title>
+		<link rel="stylesheet" href="../css/box.css" type="text/css">
 		<meta charset="utf-8"/>
 	</head>
 	<body>
