--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -5,6 +5,7 @@
 			Lists and Links
 		</title>
 		<link rel="stylesheet" href="main.css" type="text/css">
+		<link rel="stylesheet" href="../css/box.css" type="text/css">
 		<meta charset="utf-8"/>
 	</head>
 	<body>
