Edited index.html. Added title to page.

--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -10,6 +10,9 @@
 	</head>
 	<body>
 		<header>
+			<h1>
+				Lists and Links
+			</h1>
 		</header>
 		<nav>
 			<ul>
@@ -81,6 +84,11 @@
 			</ul>
 		</main>
 		<footer>
+			<p>
+			</p>
+			<article>
+			©2015 Walter Cheng - CMIS Web Design
+			</article>
 		</footer>
 	</body>
 </html>
