Edited index.html. removed border styling from html.

--- a/tables/index.html
+++ b/tables/index.html
@@ -31,7 +31,7 @@
 			<h2>
 				Simple Grid
 			</h2>
-			<table border="1">
+			<table>
 				<thead>
 					<tr>
 						<th>
@@ -97,7 +97,7 @@
 			<h2>
 				Calendar
 			</h2>
-			<table border="1">
+			<table>
 				<thead>
 					<tr>
 						<th colspan="7">
@@ -256,7 +256,7 @@
 			<h2>
 				Class Schedule
 			</h2>
-			<table border="1">
+			<table>
 				<thead>
 					<tr>
 						<th>
