Edited index.html. Added link to final folder.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 		<nav>
 			<ul>
 				<li>					
+					<a href="final">
+					final
+					</a>
+				</li>
+				<li>					
 					<a href="listsandlinks">
 					listsandlinks
 					</a>
