Made some more progress on final assignment. Added 2 images and met requirements for home page.

--- a/final/catalog.html
+++ b/final/catalog.html
@@ -2,26 +2,56 @@
 <html>
 	<head>
 		<title>
-			Title Text
+			The Cat-alog
 		</title>
+		<link rel="stylesheet" href="final.css" type="text/css">
 		<meta charset="utf-8"/>
 	</head>
 	<body>
 		<header>
 			<h1>
-			Products
+			The Cat-alog
 			</h1>
 		</header>
 		<nav>
 			<ul>
 				<li>
 					<a href="index.html">
-					final
+					Store home
 					</a>
 				</li>
 			</ul>
 		</nav>
 		<main>
+			<h2>
+				Teh Catz for sale
+			</h2>
+			<article>
+				<h3>
+					Cat
+				</h3>
+				<img src="images/Grumpy Cat.jpg" alt="Grumpy Cat" style="width:384px;height:263px;">
+				<p>
+					Grumpy Cat
+				</p>
+				<ul>
+					<li>
+						Famous on the Internet
+					</li>
+					<li>
+						Grumpy
+					</li>
+					<li>
+						Furry
+					</li>
+					<li>
+						Medium-sized
+					</li>
+					<li>
+						Price: $1337
+					</li>
+				</ul>
+			</article>
 		</main>
 		<footer>
 		</footer>
