--- a/final/index.html
+++ b/final/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<title>
-			Title Text
+			Store
 		</title>
+		<link rel="stylesheet" href="final.css" type="text/css">
 		<meta charset="utf-8"/>
 	</head>
 	<body>
@@ -22,10 +23,18 @@
 				<li>
 					<a href="catalog.html">
 					catalog
+					</a>
 				</li>
 			</ul>
 		</nav>
 		<main>
+			<h2>
+				Welcome to the Cat Store!
+			</h2>
+			<img src="images/home.jpg" alt="breadcat" style="width:236px;height:223px;">
+			<p>
+				This store is for selling cats. We have exactly 5 cats for sale. Don't miss out!
+			</p>
 		</main>
 		<footer>
 		</footer>
