Made more progress in final. Did almost all of the html stuff.

--- a/final/catalog.html
+++ b/final/catalog.html
@@ -28,9 +28,9 @@
 			</h2>
 			<article>
 				<h3>
-					Cat
+					Grumpy Cat
 				</h3>
-				<img src="images/Grumpy Cat.jpg" alt="Grumpy Cat" style="width:384px;height:263px;">
+				<img src="images/Grumpy_Cat.jpg" alt="Grumpy Cat" style="width:384px;height:263px;">
 				<p>
 					Grumpy Cat
 				</p>
@@ -52,8 +52,119 @@
 					</li>
 				</ul>
 			</article>
+			<article>
+				<h3>
+					Tree Cat
+				</h3>
+				<img src="images/Tree_Cat.jpg" alt="Tree Cat" style="width:450px;height:270px;">
+				<p>
+					Tree Cat
+				</p>
+				<ul>
+					<li>
+						Can climb up and down trees without getting stuck on the tree
+					</li>
+					<li>
+						Loves to lounge on trees
+					</li>
+					<li>
+						Furry
+					</li>
+					<li>
+						Medium-small-sized
+					</li>
+					<li>
+						Price: $687
+					</li>
+				</ul>
+			</article>
+			<article>
+				<h3>
+					Surprise Cat
+				</h3>
+				<img src="images/Surprise_Cat.jpg" alt="Surprise Cat" style="width:315px;height:236px;">
+				<p>
+					Surprise Cat
+				</p>
+				<ul>
+					<li>
+						Can make funny faces
+					</li>
+					<li>
+						Lazy
+					</li>
+					<li>
+						Furry
+					</li>
+					<li>
+						Medium-sized
+					</li>
+					<li>
+						Price: $731
+					</li>
+				</ul>
+			</article>
+			<article>
+				<h3>
+					Kitten in a Boot
+				</h3>
+				<img src="images/Kitten_in_a_Boot.jpg" alt="Kitten ina Boot" style="width:200px;height:267px;">
+				<p>
+					Kitten in a Boot
+				</p>
+				<ul>
+					<li>
+						Boot not included
+					</li>
+					<li>
+						Sleepy
+					</li>
+					<li>
+						Furry
+					</li>
+					<li>
+						Small-sized
+					</li>
+					<li>
+						Price: $1001
+					</li>
+				</ul>
+			</article>
+			<article>
+				<h3>
+					 Paint Cat
+				</h3>
+				<img src="images/Paint_Cat.jpg" alt="Paint Cat" style="width:317px;height:234px;">
+				<p>
+					Paint Cat
+				</p>
+				<ul>
+					<li>
+						Almost always a weird color
+					</li>
+					<li>
+						Playful
+					</li>
+					<li>
+						Furry
+					</li>
+					<li>
+						Medium-sized
+					</li>
+					<li>
+						Price: $???? (depends on the color of his fur when sold)
+					</li>
+				</ul>
+			</article>
 		</main>
 		<footer>
+			<p>
+				Contact Us for Customer Service at:
+			</p>
+			<p>
+				tel: 1911324367 or email: walter2645@cmis.ac.th
+			</p>
+			©2015 Walter Cheng - CMIS Web Design
 		</footer>
 	</body>
 </html>
