--- a/final/index.html
+++ b/final/index.html
@@ -37,6 +37,13 @@
 			</p>
 		</main>
 		<footer>
+			<p>
+				Contact Us for Customer Service at:
+			</p>
+			<p>
+				tel: 1911324367 or email: walter2645@cmis.ac.th
+			</p>
+			©2015 Walter Cheng - CMIS Web Design
 		</footer>
 	</body>
 </html>
