Met requirements for final assignment.

--- a/final/catalog.html
+++ b/final/catalog.html
@@ -32,7 +32,7 @@
 				</h3>
 				<img src="images/Grumpy_Cat.jpg" alt="Grumpy Cat" style="width:384px;height:263px;">
 				<p>
-					Grumpy Cat
+					Grumpy Cat. The cat that is always grumpy. You can count on him to have a grumpy attitude towards whatever you do.
 				</p>
 				<ul>
 					<li>
@@ -51,6 +51,7 @@
 						Price: $1337
 					</li>
 				</ul>
+				<br>
 			</article>
 			<article>
 				<h3>
@@ -58,7 +59,7 @@
 				</h3>
 				<img src="images/Tree_Cat.jpg" alt="Tree Cat" style="width:450px;height:270px;">
 				<p>
-					Tree Cat
+					Tree Cat. Is completely fascinated with trees. Recommended you buy him only if you have trees near where you live.
 				</p>
 				<ul>
 					<li>
@@ -77,6 +78,7 @@
 						Price: $687
 					</li>
 				</ul>
+				<br>
 			</article>
 			<article>
 				<h3>
@@ -84,7 +86,7 @@
 				</h3>
 				<img src="images/Surprise_Cat.jpg" alt="Surprise Cat" style="width:315px;height:236px;">
 				<p>
-					Surprise Cat
+					Surprise Cat. Randomly makes funny faces, whether you are looking or not. Nobody knows why she does this.
 				</p>
 				<ul>
 					<li>
@@ -103,6 +105,7 @@
 						Price: $731
 					</li>
 				</ul>
+				<br>
 			</article>
 			<article>
 				<h3>
@@ -110,7 +113,7 @@
 				</h3>
 				<img src="images/Kitten_in_a_Boot.jpg" alt="Kitten ina Boot" style="width:200px;height:267px;">
 				<p>
-					Kitten in a Boot
+					Kitten in a Boot. Loves to sleep in furry boots like shown in the picture.
 				</p>
 				<ul>
 					<li>
@@ -129,6 +132,7 @@
 						Price: $1001
 					</li>
 				</ul>
+				<br>
 			</article>
 			<article>
 				<h3>
@@ -136,7 +140,7 @@
 				</h3>
 				<img src="images/Paint_Cat.jpg" alt="Paint Cat" style="width:317px;height:234px;">
 				<p>
-					Paint Cat
+					Paint Cat. Somehow always manages to find paint to roll around in. Recommended you either get paint-proof furniture, or train him to wait till he is dried before going on sofas and beds.
 				</p>
 				<ul>
 					<li>
@@ -155,6 +159,7 @@
 						Price: $???? (depends on the color of his fur when sold)
 					</li>
 				</ul>
+				<br>
 			</article>
 		</main>
 		<footer>
