--- a/final/index.html
+++ b/final/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>
-			Store
+			Cat-alog Home
 		</title>
 		<link rel="stylesheet" href="final.css" type="text/css">
 		<meta charset="utf-8"/>
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<h1>
-				Store
+				The Cat-alog Store
 			</h1>
 		</header>
 		<nav>
